--- a/Grimoire/Grimoire.csproj
+++ b/Grimoire/Grimoire.csproj
@@ -6,6 +6,11 @@
     <PackageReference Include="ElectronNET.API" Version="7.30.2" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Grimoire.Business\Grimoire.Business.csproj" />
+    <ProjectReference Include="..\Grimoire.Services\Grimoire.Services.csproj" />
+    <ProjectReference Include="..\GrimoireDomain\Grimoire.Domain.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Update="electron.manifest.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
