--- a/Grimoire.Tests/Grimoire.Tests.csproj
+++ b/Grimoire.Tests/Grimoire.Tests.csproj
@@ -22,6 +22,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="TestData\TestScriptError.ps1">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\TestScriptWarning.ps1">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="TestData\TestScript.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
