--- a/Grimoire.ConsoleUI/Grimoire.ConsoleUI.csproj
+++ b/Grimoire.ConsoleUI/Grimoire.ConsoleUI.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
     <PackageReference Include="Terminal.Gui" Version="0.81.0" />
   </ItemGroup>
 
