--- a/Grimoire.Business/Grimoire.Business.csproj
+++ b/Grimoire.Business/Grimoire.Business.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Authors>Kelvys B.</Authors>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="3.5.0" />
@@ -11,6 +13,12 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GrimoireDomain\Grimoire.Domain.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
